--- a/HTML/style.css
+++ b/HTML/style.css
@@ -6,10 +6,10 @@
 
 .columna{
 
-    background-color:silver;
+    background-color:whitesmoke;
     padding: 100px;
     margin: 0 5px;
- 
+
 
 }
 
@@ -22,4 +22,16 @@
 
 }
 
+.columnass{
 
+    background-color:whitesmoke;
+    padding: 100px;
+    margin: 0 5px;
+ 
+
+}
+
+
+
+ 
+ 
