--- a/CSS/YouTube/styles/header.css
+++ b/CSS/YouTube/styles/header.css
@@ -14,39 +14,29 @@ header {
     grid-gap: 30px;
 }
 
-/*.right{
-
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 50px);
-    grid-gap: 30px;
-    padding-right: 38px;
-    
-
-} */
 
 .right{
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 30px);
-    grid-gap: 20px;
-    padding-right: 50px;
-    
+     display: grid;
+     grid-template-columns: repeat(4, 1fr);
+     grid-column-gap: 0px;
+     grid-row-gap: 0px;
 
+     
 } 
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 1 / 3 / 2 / 4; }
+    .div4 { grid-area: 1 / 4 / 2 / 5; }
+    .div5 { grid-area: 2 / 1 / 3 / 2; }
+    .div6 { grid-area: 2 / 2 / 3 / 3; }
+    .div7 { grid-area: 2 / 3 / 3 / 4; }
+    .div8 { grid-area: 2 / 4 / 3 / 5; }
+    .div9 { grid-area: 3 / 1 / 4 / 2; }
+    .div10 { grid-area: 3 / 2 / 4 / 3; }
+    .div11 { grid-area: 3 / 3 / 4 / 4; }
+    .div12 { grid-area: 3 / 4 / 4 / 5; }
 
-.right-videos{
-
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 50px);
-    grid-gap: 30px;
-    padding-right: 38px;
-    
-    
-
-} 
 
 
 
@@ -54,6 +44,7 @@ header {
 
     margin: 20px;
     padding-bottom: 15px;
+    
 }
 
 
@@ -62,7 +53,6 @@ header {
     width: 35px;
     
     
-
 }
 
 #suscripciones{
@@ -92,13 +82,15 @@ header {
     width: 42px;
 }
 
-.right > input {
+.right >div > input {
 
     border: 2px solid silver;
     border-radius: 15px;
     height: 30px;
-    width: 180px;
+    width: 140px;
     
-    
+} 
+
+
    
-}
+   
