--- a/SASS/Proyecto_Blog/styles/components/_body.sass
+++ b/SASS/Proyecto_Blog/styles/components/_body.sass
@@ -1,25 +1,204 @@
+nav
+  padding: 25px
+  background-color: silver
+  display: flex
+  justify-content: space-between
+  aling-items: center
 
-  nav
-    padding: 25px
-    background-color: silver
-    display: flex
-    justify-content: space-between
-    aling-items: center
+nav > div
+  display: flex
+  justify-content: center
+  aling-items: center
+  gap: 12px
 
-  nav > div
-    display: flex
-    justify-content: center
-    aling-items: center
-    gap: 12px
+.Menu
+  display: none
 
-  .Logo
-    font-size: 55px
-    font-family: "Updock", cursive
-    font-weight: 400
-    font-style: normal
+/*
+ *QUERY RESPONSIVE
 
+/* Extra small devices (phones, 600px and down)
+@media only screen and (max-width: 600px)
+  
+/* Small devices (portrait tablets and large phones, 600px and up)
+@media only screen and (min-width: 600px)
+ 
+/* Medium devices (landscape tablets, 768px and up)
+@media only screen and (min-width: 768px)
+  
   .Menu
-    font-size: 18px
-    padding-top: 40px
+    display: flex
+
+  .menu-responsive
+    display: none
+
+/* Large devices (laptops/desktops, 992px and up)
+@media only screen and (min-width: 992px)
+ 
+
+/* Extra large devices (large laptops and desktops, 1200px and up)
+@media only screen and (min-width: 1200px)
+  
+.Logo
+  font-size: 55px
+  font-family: "Updock", cursive
+  font-weight: 400
+  font-style: normal
+
+#titulo
+  font-family: "Pacifico", cursive
+  font-weight: 400
+  font-style: normal
+
+.Menu
+  font-size: 18px
+  padding-top: 40px
+
+.Hover:hover
+  font-weight: 700
+  cursor: pointer
+
+header 
+  display: grid
+  grid-template-columns: 25% 50% 25%
+
+.derecha 
+  display: grid
+  grid-template-columns: 1fr
+  grid-gap: 20px
+  padding:  20px
+  text-align: center
+
+.izquierda1
+  display: grid
+  grid-template-columns: 1fr
+  grid-gap: 20px
+  padding:  20px
+  text-align: center
+
+.intermedio
+  display: grid
+  grid-template-columns: repeat(2, 20%)
+  grid-template-rows: repeat(2, 30%)
+  grid-column-gap: 3px
+  grid-row-gap: 28px
+  
+#titulo2
+  margin-top: 6px
+  font-family: "Pacifico", cursive
+  font-weight: 400
+  font-style: normal
+
+#contenido
+  margin-left: 40px
+  text-align: justify
+
+header > div > img
+  display: block
+  margin:  auto
+  border-radius: 15px
+  width: 160px
+
+.Herrera
+  font-size: 8px
+ 
+.Galarraga
+  font-size: 8px
+    
+.Abreu
+  font-size: 8px
+
+.Convit
+  font-size: 8px
+
+#blogHerrera
+  height: 250px
+
+#deportes
+  width: 265px
+  height: 148px
+  
+#sinfonica
+  width: 265px
+  height: 140px
+
+#JConvit
+  width: 266px
+  height: 140px 
+
+#boton1
+  border-radius: 8px
+  width: 100px
+  height: 22px
+  font-size: 13px
+  color: black
+  margin-left: 90px
+  cursor: pointer
+  
+#boton2
+  border-radius: 8px
+  width: 100px
+  height: 22px
+  font-size: 13px
+  color: black
+  margin-left: 90px
+  margin-bottom: 60px
+  cursor: pointer
+
+#boton3
+  border-radius: 8px
+  width: 100px
+  height: 28px
+  font-size: 13px
+  color: black
+  margin-left: 90px
+  cursor: pointer
+
+#boton4
+  border-radius: 8px
+  width: 100px
+  height: 28px
+  font-size: 13px
+  color: black
+  margin-left: 90px
+  cursor: pointer
+
+.intermedio1 
+  margin-left: 105px
+  margin-top: 180px
+
+.intermedio2
+  margin-top: 180px
+  margin-left: 237px
+  
+
+.intermedio3
+  margin-left: 110px
+  margin-top: 15px
+
+.intermedio4
+  margin-left: 236px
+  margin-top: 15px
+
+
+  
+  
+  
+
+
+    
+    
+
+  
+    
+    
+  
+  
+  
+
+  
+    
+
+
 
 
